--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.5.0",
+    "@google-cloud/local-auth": "^3.0.1",
+    "@googleapis/forms": "^2.0.7",
     "@hookform/resolvers": "^3.9.0",
     "@legendapp/state": "^2.1.15",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -40,13 +42,14 @@
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-table": "^8.20.5",
     "@types/bun": "^1.1.9",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.1",
     "lucide-react": "^0.395.0",
-    "next": "^14.2.11",
+    "next": "^14.2.13",
     "next-auth": "^5.0.0-beta.21",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
@@ -57,24 +60,24 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.3",
+    "vaul": "^0.9.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.12",
     "@types/node": "^20.16.5",
-    "@types/react": "^18.3.6",
+    "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "drizzle-kit": "^0.23.2",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.11",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.13",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss": "^3.4.11",
+    "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
   },
   "ct3aMetadata": {
