--- a/package.json
+++ b/package.json
@@ -14,43 +14,47 @@
     "start": "next start"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "^1.5.0",
+    "@ai-sdk/openai": "^0.0.66",
+    "@auth/drizzle-adapter": "^1.7.0",
     "@google-cloud/local-auth": "^3.0.1",
     "@googleapis/forms": "^2.0.7",
     "@hookform/resolvers": "^3.9.0",
     "@legendapp/state": "^2.1.15",
-    "@radix-ui/react-accordion": "^1.2.0",
+    "@lottiefiles/dotlottie-react": "^0.9.1",
+    "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
-    "@radix-ui/react-avatar": "^1.1.0",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-context-menu": "^2.2.1",
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-context-menu": "^2.2.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-radio-group": "^1.2.0",
-    "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slider": "^1.2.0",
+    "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-table": "^8.20.5",
-    "@types/bun": "^1.1.9",
+    "@types/bun": "^1.1.11",
+    "ai": "^3.4.9",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "drizzle-orm": "^0.33.0",
+    "drizzle-orm": "^0.34.1",
     "geist": "^1.3.1",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.395.0",
-    "next": "^14.2.13",
-    "next-auth": "^5.0.0-beta.21",
+    "next": "^14.2.15",
+    "next-auth": "^5.0.0-beta.22",
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
@@ -58,27 +62,27 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.4",
+    "vaul": "^0.9.9",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.12",
-    "@types/node": "^20.16.5",
-    "@types/react": "^18.3.8",
-    "@types/react-dom": "^18.3.0",
+    "@types/node": "^20.16.11",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "drizzle-kit": "^0.23.2",
+    "drizzle-kit": "^0.25.0",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.13",
+    "eslint-config-next": "^14.2.15",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss": "^3.4.12",
-    "typescript": "^5.6.2"
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.34.0"
