--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ai-sdk/google": "^0.0.52",
     "@ai-sdk/openai": "^0.0.66",
     "@auth/drizzle-adapter": "^1.7.0",
     "@google-cloud/local-auth": "^3.0.1",
