--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@legendapp/state": "^2.1.15",
     "@lottiefiles/dotlottie-react": "^0.9.1",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -51,6 +52,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.34.1",
+    "framer-motion": "^11.11.9",
     "geist": "^1.3.1",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.395.0",
