--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@ai-sdk/google": "^0.0.52",
     "@ai-sdk/openai": "^0.0.66",
-    "@auth/drizzle-adapter": "^1.7.0",
+    "@auth/drizzle-adapter": "^1.7.2",
     "@google-cloud/local-auth": "^3.0.1",
     "@googleapis/forms": "^2.0.7",
     "@hookform/resolvers": "^3.9.0",
@@ -45,8 +45,10 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-table": "^8.20.5",
+    "@trigger.dev/sdk": "^3.1.2",
     "@types/bun": "^1.1.11",
-    "ai": "^3.4.9",
+    "@types/marked": "^6.0.0",
+    "ai": "^3.4.16",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -55,24 +57,28 @@
     "framer-motion": "^11.11.9",
     "geist": "^1.3.1",
     "lottie-react": "^2.4.0",
-    "lucide-react": "^0.395.0",
+    "lucide-react": "^0.456.0",
+    "marked": "^15.0.0",
     "next": "^14.2.15",
-    "next-auth": "^5.0.0-beta.22",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.3.0",
+    "phantomjscloud": "^3.5.5",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.0",
+    "react-hook-form": "^7.53.1",
+    "recharts": "^2.13.3",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.3",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@trigger.dev/build": "^3.1.2",
     "@types/eslint": "^8.56.12",
-    "@types/node": "^20.16.11",
+    "@types/node": "^20.16.13",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
@@ -84,7 +90,7 @@
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss": "^3.4.13",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   },
   "ct3aMetadata": {
