--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,11 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
+DATABASE_URL=
 
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
+NEXTAUTH_URL=
+AUTH_SECRET=
 
-# When adding additional environment variables, the schema in "/src/env.js"
-# should be updated accordingly.
+AUTH_GOOGLE_ID=
+AUTH_GOOGLE_SECRET=
 
-# Drizzle
-DATABASE_URL="postgresql://postgres:password@localhost:5432/aigform"
+GROQ_API_KEY=
 
-# Next Auth
-# You can generate a new secret on the command line with:
-# openssl rand -base64 32
-# https://next-auth.js.org/configuration/options#secret
-# NEXTAUTH_SECRET=""
-NEXTAUTH_URL="http://localhost:3000"
-
-# Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+SCREENSHOT_API_KEY=
